--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -16,12 +16,26 @@
         document.getElementsByTagName('head')[0].append(script);
       }
     </script>
+
+    <script type="text/javascript">
+      (function (c, l, a, r, i, t, y) {
+        c[a] =
+          c[a] ||
+          function () {
+            (c[a].q = c[a].q || []).push(arguments);
+          };
+        t = l.createElement(r);
+        t.async = 1;
+        t.src = 'https://www.clarity.ms/tag/' + i;
+        y = l.getElementsByTagName(r)[0];
+        y.parentNode.insertBefore(t, y);
+      })(window, document, 'clarity', 'script', 'hzlyo54fi4');
+    </script>
   </head>
   <body>
-    <div id="app"><!--index.jsx injects App.jsx here-->
-      <div style="text-align: center; padding: 70px 0;">
-        Loading...
-      </div>
+    <div id="app">
+      <!--index.jsx injects App.jsx here-->
+      <div style="text-align: center; padding: 70px 0">Loading...</div>
     </div>
     <script type="module" src="/index.jsx"></script>
   </body>
