added brevo chat widget

--- a/web/frontend/index.html
+++ b/web/frontend/index.html
@@ -17,6 +17,7 @@
       }
     </script>
 
+    <!-- Microsoft clarity -->
     <script type="text/javascript">
       (function (c, l, a, r, i, t, y) {
         c[a] =
@@ -31,6 +32,23 @@
         y.parentNode.insertBefore(t, y);
       })(window, document, 'clarity', 'script', 'hzlyo54fi4');
     </script>
+
+    <!-- Brevo Conversations {literal} -->
+    <script>
+      (function (d, w, c) {
+        w.BrevoConversationsID = '64fbfc5adac3ed12415b2504';
+        w[c] =
+          w[c] ||
+          function () {
+            (w[c].q = w[c].q || []).push(arguments);
+          };
+        var s = d.createElement('script');
+        s.async = true;
+        s.src = 'https://conversations-widget.brevo.com/brevo-conversations.js';
+        if (d.head) d.head.appendChild(s);
+      })(document, window, 'BrevoConversations');
+    </script>
+    <!-- /Brevo Conversations {/literal} -->
   </head>
   <body>
     <div id="app">
